...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/course"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="4dp"
...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editInfoWindowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course" />

        <Button
            android:id="@+id/editInfoWindowButton"
...
            android:text="@string/broadcast_info_window_edit"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/delete"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background_red"
            android:text="@string/broadcast_info_window_delete"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editCourseText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <EditText
            android:id="@+id/editDescriptionText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/saveInfoWindowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCourseText"
            tools:text="Name" />

        <Button
...
            android:text="@string/broadcast_info_window_save"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancelInfoWindowButton"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background_grey"
            android:text="@string/broadcast_info_window_cancel"
...
