...
        android:visibility="visible"
        android:entries="@array/StringCourses"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="31dp"
...
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/addBtn"
        android:text="@string/cancelBtn" />

    <EditText
        android:id="@+id/descriptionEdittext"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/courseSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
...
